Fix "ticker" type for the gcalflow/agenda
* Fix the items was not visible with the "ticker" type - do not apply
  default item container block styles with the "ticker" type

--- a/gcalflow/agenda.less
+++ b/gcalflow/agenda.less
@@ -55,11 +55,14 @@ ul {
             color: #fff;
         }
     }
-    .gcf-item-container-block {
-        box-sizing: border-box;
-        border-bottom: solid 80px transparent;
-        height: 100%;
-        overflow-y: auto;
+
+    &:not(.ticker) {
+        .gcf-item-container-block {
+            box-sizing: border-box;
+            border-bottom: solid 80px transparent;
+            height: 100%;
+            overflow-y: auto;
+        }
     }
     &:not(.tasks):not(.ticker) {
         .gcf-item-container-block {
